plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group = 'ru.brikster'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()

    maven { url 'https://repo.codemc.io/repository/maven-public/' }
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
}

jar {
    manifest {
        attributes(
                'Implementation-Title': 'PathMirror',
                'Implementation-Version': project.version,
                'Implementation-Vendor-Id': "${project.group}.${project.name}",
                'Premain-Class': 'ru.brikster.pathmirror.PathMirrorAgent',

                'Specification-Title': 'PathMirror',
                'Specification-Version': project.version,
                'Can-Retransform-Classes': true
        )
    }
}

tasks {
    shadowJar {
        archiveFileName.set('PathMirror.jar')
    }

    build {
        dependsOn('shadowJar')
    }

    compileJava {
        options.encoding = 'UTF-8'
    }
}

dependencies {
    compileOnly 'com.destroystokyo.paper:paper-api:1.12.2-R0.1-SNAPSHOT'

    implementation 'net.bytebuddy:byte-buddy:1.12.12'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.3'
}

sourceCompatibility = sourceCompatibility = JavaVersion.VERSION_11
